--- a/index.html
+++ b/index.html
@@ -231,6 +231,9 @@ Our team provide strategic business consulting, application services, technology
 <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+
 <section id="contact" class="contact-section">
   <h2>Contact Us</h2>
   <div class="contact-bar">
@@ -255,11 +258,11 @@ Our team provide strategic business consulting, application services, technology
 
 <style>
 .contact-section {
-  padding: 60px 40px;       /* increased padding for large content */
+  padding: 60px 20px;
   background: #f0f4f8;
   font-family: 'Segoe UI', sans-serif;
   text-align: center;
-  width: 100%;              /* ensures section expands fully */
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -269,17 +272,15 @@ Our team provide strategic business consulting, application services, technology
   color: #333;
 }
 
-/* Inline horizontal layout, no wrap */
+/* Flex container for inline cards */
 .contact-bar {
   display: flex;
-  justify-content: space-around;  /* evenly distributes boxes */
+  justify-content: space-between;  /* evenly spaced inline */
+  flex-wrap: nowrap;               /* no wrapping */
+  width: 100%;
+  max-width: none;                 /* remove previous max-width */
+  margin: 0 auto;
   gap: 20px;
-  flex-wrap: nowrap;              /* all boxes inline */
-  width: 100%;                    /* takes full section width */
-  max-width: 1200px;              /* optional: keeps it centered */
-  margin: 0 auto;                 /* centers bar in section */
-  padding: 0 10px;
-  box-sizing: border-box;
 }
 
 /* Individual cards */
@@ -287,8 +288,8 @@ Our team provide strategic business consulting, application services, technology
   background: #fff;
   border-radius: 15px;
   padding: 25px 20px;
-  flex: 1;                         /* equal width cards */
-  min-width: 220px;                /* ensures readability */
+  flex: 1;                       /* equal width */
+  min-width: 200px;              /* prevent cards from shrinking too small */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -334,14 +335,8 @@ Our team provide strategic business consulting, application services, technology
   color: #0056b3;
 }
 
-/* Responsive: shrink cards but stay inline */
-@media (max-width: 1200px) {
-  .contact-item {
-    min-width: 200px;
-  }
-}
-
-@media (max-width: 992px) {
+/* Responsive adjustments for smaller screens */
+@media (max-width: 1024px) {
   .contact-item {
     min-width: 180px;
   }
@@ -349,7 +344,6 @@ Our team provide strategic business consulting, application services, technology
 
 @media (max-width: 768px) {
   .contact-bar {
-    justify-content: space-between;
     gap: 10px;
   }
   .contact-item {
@@ -357,6 +351,7 @@ Our team provide strategic business consulting, application services, technology
   }
 }
 </style>
+
 
 
 
@@ -386,6 +381,7 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
 
 
 
