--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@ Our team provide strategic business consulting, application services, technology
 <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
-<section id="contact" class="contact-section">
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+
+<div class="contact-section">
   <h2>Contact Us</h2>
   <div class="contact-bar">
     <div class="contact-item">
@@ -254,42 +257,44 @@ Our team provide strategic business consulting, application services, technology
       <p>Dubai, UAE</p>
     </div>
   </div>
-</section>
+</div>
 
 <style>
 .contact-section {
-  padding: 60px 20px;
-  background: #f0f4f8;
+  padding: 40px 20px;
   font-family: 'Segoe UI', sans-serif;
   text-align: center;
   width: 100%;
   box-sizing: border-box;
 }
 
+/* Heading */
 .contact-section h2 {
   font-size: 2.5rem;
-  margin-bottom: 40px;
   color: #333;
+  margin-bottom: 30px;
 }
 
-/* Flex container for inline cards */
+/* Inline container */
 .contact-bar {
   display: flex;
-  justify-content: space-between;  /* evenly spaced inline */
-  flex-wrap: nowrap;               /* no wrapping */
-  width: 100%;
-  max-width: none;                 /* remove previous max-width */
-  margin: 0 auto;
+  justify-content: space-between;
+  flex-wrap: nowrap;
   gap: 20px;
+  width: 100%;
+  max-width: none;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0 10px;
 }
 
-/* Individual cards */
+/* Cards */
 .contact-item {
   background: #fff;
   border-radius: 15px;
   padding: 25px 20px;
-  flex: 1;                       /* equal width */
-  min-width: 200px;              /* prevent cards from shrinking too small */
+  flex: 1;             /* equal width */
+  min-width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -335,7 +340,7 @@ Our team provide strategic business consulting, application services, technology
   color: #0056b3;
 }
 
-/* Responsive adjustments for smaller screens */
+/* Responsive */
 @media (max-width: 1024px) {
   .contact-item {
     min-width: 180px;
@@ -351,6 +356,7 @@ Our team provide strategic business consulting, application services, technology
   }
 }
 </style>
+
 
 
 
@@ -381,6 +387,7 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
 
 
 
