--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 </head>
 <body style="margin:0; font-family:Arial, sans-serif; color:#333; scroll-behavior:smooth;">
 
-<header style="position:fixed; top:0; left:0; width:100%; background:#ffffff; color:#000; padding:15px 30px; z-index:1000; display:flex; justify-content:space-between; align-items:center; box-shadow:0 4px 10px rgba(0,0,0,0.15); font-family:Arial, sans-serif;">
+<header style="position:fixed; top:0; left:0; width:100%; background:#fff; color:#000; padding:15px 30px; z-index:1000; display:flex; justify-content:space-between; align-items:center; box-shadow:0 4px 10px rgba(0,0,0,0.15); font-family:Arial, sans-serif;">
 
   <!-- Logo and Heading -->
   <div style="display:flex; align-items:center; gap:20px;">
-    <img src="https://via.placeholder.com/120x60" alt="Tangent Group Logo" style="height:60px; width:auto; border-radius:5px; box-shadow:0 2px 5px rgba(0,0,0,0.1);">
+    <img src="https://via.placeholder.com/120x60" alt="Tangent Group Logo" style="height:60px; width:auto;">
     <span style="font-size:3em; font-weight:bold; color:red; -webkit-text-stroke:1px blue; text-stroke:1px blue; text-transform:uppercase; letter-spacing:2px; line-height:1;">
       Tangent Group
     </span>
   </div>
 
   <!-- Reach Us -->
-  <div style="position:relative; display:inline-block; font-size:1.5em; cursor:pointer; user-select:none;">
-    <span style="background:#0d47a1; color:#fff; padding:8px 12px; border-radius:8px; display:flex; align-items:center; gap:8px; font-weight:bold;">
+  <div style="position:relative; font-size:1.5em; cursor:pointer; user-select:none;">
+    <span id="reachBtn" style="color:#0d47a1; font-weight:bold; transition:0.3s;">
       📞 Reach Us
     </span>
-    <span id="phoneNumber" style="position:absolute; top:110%; left:50%; transform:translateX(-50%); background:#0d47a1; color:#fff; padding:6px 10px; border-radius:5px; white-space:nowrap; opacity:0; visibility:hidden; transition:all 0.3s ease; font-size:1em;">
+    <span id="phoneNumber" style="position:absolute; top:110%; left:55%; transform:translateX(-50%); color:#0d47a1; font-weight:bold; font-size:1em; white-space:nowrap; opacity:0; transition:0.3s;">
       +971 50 263 625
     </span>
   </div>
@@ -30,33 +30,18 @@
 </header>
 
 <script>
-  const reachUs = document.querySelector('header div[style*="position:relative"]');
+  const reachBtn = document.getElementById('reachBtn');
   const phone = document.getElementById('phoneNumber');
 
-  // Desktop hover
-  reachUs.addEventListener('mouseenter', () => {
-    phone.style.opacity = '1';
-    phone.style.visibility = 'visible';
-  });
-  reachUs.addEventListener('mouseleave', () => {
-    phone.style.opacity = '0';
-    phone.style.visibility = 'hidden';
-  });
+  // Show on hover (desktop)
+  reachBtn.addEventListener('mouseenter', () => { phone.style.opacity = 1; });
+  reachBtn.addEventListener('mouseleave', () => { phone.style.opacity = 0; });
 
-  // Mobile toggle
-  reachUs.addEventListener('click', () => {
-    if (phone.style.opacity === '1') {
-      phone.style.opacity = '0';
-      phone.style.visibility = 'hidden';
-    } else {
-      phone.style.opacity = '1';
-      phone.style.visibility = 'visible';
-    }
+  // Toggle on click (mobile)
+  reachBtn.addEventListener('click', () => {
+    phone.style.opacity = phone.style.opacity == 1 ? 0 : 1;
   });
 </script>
-
-
-
 
 <!-- Slider Section -->
 <section id="home" style="position:relative; height:100vh; overflow:hidden; margin-top:0;">
@@ -465,3 +450,4 @@ document.querySelectorAll('#mainNav a').forEach(link => {
 
 </body>
 </html>
+
